# DevOps

./: Dockerfile  FuncA  FuncA.cpp  FuncA.h  Makefile  Makefile.am  Makefile.in  autogen.sh  config.status  configure.ac  configure~  main.cpp  nginx.conf  scriptA.sh  scriptB.sh  server.cpp  unit_tests
.deps/: FuncA.Po  http_server-FuncA.Po  http_server-server.Po  main.Po  unit_tests-FuncA.Po
.github/workflows/: build-deb.yml  c-cpp.yml  ci.yml  docker-multiarch.yml
autom4te.cache/: output.1  output.2  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.5
debian/: changelog  control  devops.substvars  files  rules
debian/.debhelper/devops/: dbgsym-build-ids
debian/.debhelper/devops/dbgsym-root/DEBIAN/: control  md5sums
debian/devops/DEBIAN/: control  md5sums
tests/: Makefile  Makefile.am  Makefile.in  taylorSineTest1  taylorSineTest1.cpp  taylorSineTest2  taylorSineTest2.cpp  taylorSineTest3  taylorSineTest3.cpp  taylorSineTest4  taylorSineTest4.cpp  test.cpp
tests/.deps/: unit_tests-test.Po
